Create smash-burger.html and add contents to page added boilerplate, headings, ingredients, and directions. Also added directions heading to lasagna.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+
     <title>Lasagna Recipe</title>
 </head>
 <body>
@@ -53,6 +53,7 @@
 
         <li>¾ cup grated Parmesan cheese</li>
     </ul>
+        <h4>Directions</h4>
     <ol>
         <li>Gather the ingredients</li>
         <li>Cook sausage, ground beef, onion, and garlic in a Dutch oven over medium heat until well browned.</li>
