--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     </heading>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html">Lasagna Recipe</a>
-        <a href="recipes/smash-burger.html">Smash Burger Recipe</a>
-        <a href="recipes/tacos.html">Chorizo Tacos Recipe</a>
+    <ul>
+       <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+       <li><a href="recipes/smash-burger.html">Smash Burger Recipe</a></li>
+       <li><a href="recipes/tacos.html">Chorizo Tacos Recipe</a></li>
+    </ul>
     </body>
 </html>
